--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,12 +12,12 @@
 
 :root {
   /* colors */
-  --background-color: white;
+  --background-color: cyan; /* TODO: white; */
   --light-color: #f8f8f8;
   --dark-color: #505050;
-  --text-color: #131313;
+  --text-color: magenta; /* TODO: #131313; */
   --link-color: #3b63fb;
-  --link-hover-color: #1d3ecf;
+  --link-hover-color: red; /* TODO:  #1d3ecf; */
 
   /* fonts */
   --body-font-family: roboto, roboto-fallback, sans-serif;
